--- a/inst/rmd/report.html
+++ b/inst/rmd/report.html
@@ -1614,8 +1614,10 @@ div.tocify {
 </div>
 <h1 class="title toc-ignore">Prediction Report</h1>
 </div>
-<div id="study-na" class="section level1">
-<h1>Study: <strong>NA</strong></h1>
+<div id="study-info" class="section level1">
+<h1>Study info</h1>
+<p>Study name: <strong>NA</strong><br />
+Normalization method: <strong>NA</strong></p>
 </div>
 <div id="about-the-project" class="section level1">
 <h1>About the project</h1>
